--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 body {
-  background-color: rgba(233, 202, 233, 0.37);
+  background-color: rgb(19, 26, 27);
   color: white;
 }
