--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -27,30 +27,61 @@
       padding: 10px 10px;
       width: 90%;
       margin: 5px;
-      color: rgb(255, 253, 253);
+      color: rgb(15, 15, 15);
       outline: none;
       &[type="submit"] {
         background-color: rgb(3, 12, 10);
-        color: rgb(0, 0, 0);
+        color: rgb(207, 205, 205);
         cursor: pointer;
       }
     }
   }
 }
-.question_box{
+.question_box {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px; 
+  
+  
+  @media (max-width: 640px) {
+      flex-direction: column;
+      align-items: center;
+  }
 
-  .box{
-    background-color: #0b1d39;
-    width: 35rem;
+  @media (min-width: 641px) and (max-width: 1024px) {
+      flex-direction: column;
+      align-items: center;
   }
-  .heading{
-    overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+
+  @media (min-width: 1025px) {
+      flex-direction: column;
+      align-items: center;
   }
+
+  .box {
+      background-color: #0b1c38;
+      width: auto; 
+      margin: 0.75rem;
+
+      @media (min-width: 641px) {
+          width: 45%;
+      }
+
+      @media (min-width: 1025px) {
+          width: 30%; 
+      }
+  }
+
+  // .heading {
+  //     overflow: hidden;
+  //     white-space: nowrap;
+  //     text-overflow: ellipsis;
+  // }
+
+
 
   .options {
     display: flex;
