--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -42,6 +42,7 @@
   flex-direction: column;
   align-items: center;
   gap: 16px; 
+  width: auto;
   
   
   @media (max-width: 640px) {
@@ -61,16 +62,16 @@
 
   .box {
       background-color: #0b1c38;
-      width: auto; 
+      // width: auto; 
       margin: 0.75rem;
 
-      @media (min-width: 641px) {
-          width: 45%;
-      }
+      // @media (min-width: 641px) {
+      //     width: 45%;
+      // }
 
-      @media (min-width: 1025px) {
-          width: 30%; 
-      }
+      // @media (min-width: 1025px) {
+      //     width: 30%; 
+      // }
   }
 
 
