--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -110,3 +110,24 @@
     }
   }
 }
+
+.loading {
+  width: 100vw;
+  height: 100vh;
+ 
+  display: grid;
+  place-items: center;
+  max-width: 100%;
+}
+.loading_1 {
+ padding-left: 1rem;
+  display: grid;
+  position: relative;
+  top: 5%;
+  place-items: center;
+  max-width: 100%;
+}
+.loader{
+  margin-right: 42%;
+  margin-top: 5%;
+}
