--- a/src/pages/EditDetails.css
+++ b/src/pages/EditDetails.css
@@ -11,7 +11,6 @@
   text-align: center;
 }
 
-/* Add styles for the dropdown button */
 .dropdown-btn {
   background-color: #1890ff;
   color: rgb(0, 0, 0);
@@ -21,19 +20,23 @@
   cursor: pointer;
 }
 
-/* Style the menu items */
 .chapter-item {
   padding: 6px 12px;
   cursor: pointer;
 }
 
-/* Add hover effect for menu items */
 .chapter-item:hover {
   background-color: #000000;
 }
 
-/* Style the dropdown menu */
 .chapter-dropdown .ant-dropdown-menu {
-  max-height: 300px; /* Adjust based on your needs */
+  max-height: 300px;
   overflow-y: auto;
 }
+
+.custom-underline {
+  text-decoration: underline;
+  text-decoration-color: currentColor;
+  text-underline-offset: 5px;
+}
+
